pdo oci old version for php7+

--- a/services/php/php.ini
+++ b/services/php/php.ini
@@ -175,7 +175,7 @@ soap.wsdl_cache_ttl=86400
 ; extension = "redis.so"
 ; extension = "mongodb.so"
 ; extension = "yaf.so"
-extension = pdo_oci
+; extension = pdo_oci
 extension = pdo_dblib
 ; extension = "swoole.so"
 extension = grpc
