--- a/services/php/Dockerfile
+++ b/services/php/Dockerfile
@@ -6,6 +6,10 @@ ARG PHP_EXTENSIONS
 ARG CONTAINER_PACKAGE_URL
 
 
+COPY ./initsh /usr/local/bin/
+RUN chmod 777 /usr/local/bin/initsh
+
+
 RUN if [ $CONTAINER_PACKAGE_URL ] ; then sed -i "s/dl-cdn.alpinelinux.org/${CONTAINER_PACKAGE_URL}/g" /etc/apk/repositories ; fi
 
 
