--- a/services/php/php.ini
+++ b/services/php/php.ini
@@ -176,7 +176,7 @@ soap.wsdl_cache_ttl=86400
 ; extension = "mongodb.so"
 ; extension = "yaf.so"
 ; extension = pdo_oci
-extension = pdo_dblib
+; extension = pdo_dblib
 ; extension = "swoole.so"
 extension = grpc
 [opcache]
