--- a/env.sample
+++ b/env.sample
@@ -31,7 +31,7 @@ ALPINE_VERSION=3.12
 #
 # Nginx
 #
-NGINX_VERSION=1.19.1-alpine
+NGINX_VERSION=1.18.0-alpine
 NGINX_HTTP_HOST_PORT=80
 NGINX_HTTPS_HOST_PORT=443
 NGINX_CONFD_DIR=./services/nginx/conf.d
@@ -46,23 +46,23 @@ NGINX_INSTALL_APPS=
 #
 # Openresty
 #
-OPENRESTY_VERSION=alpine
-OPENRESTY_HTTP_HOST_PORT=80
-OPENRESTY_HTTPS_HOST_PORT=443
-OPENRESTY_CONFD_DIR=./services/openresty/conf.d
-OPENRESTY_CONF_FILE=./services/openresty/openresty.conf
-OPENRESTY_FASTCGI_PHP_CONF=./services/openresty/fastcgi-php.conf
-OPENRESTY_CONF_FASTCGIPARAMS_FILE=./services/openresty/fastcgi_params
-OPENRESTY_SSL_CERTIFICATE_DIR=./services/openresty/ssl
-OPENRESTY_LOG_DIR=./logs/nginx
+# OPENRESTY_VERSION=alpine
+# OPENRESTY_HTTP_HOST_PORT=80
+# OPENRESTY_HTTPS_HOST_PORT=443
+# OPENRESTY_CONFD_DIR=./services/openresty/conf.d
+# OPENRESTY_CONF_FILE=./services/openresty/openresty.conf
+# OPENRESTY_FASTCGI_PHP_CONF=./services/openresty/fastcgi-php.conf
+# OPENRESTY_CONF_FASTCGIPARAMS_FILE=./services/openresty/fastcgi_params
+# OPENRESTY_SSL_CERTIFICATE_DIR=./services/openresty/ssl
+# OPENRESTY_LOG_DIR=./logs/nginx
 
 #
 # SUPERVISOR
 #
-SUPERVISOR_CONFIG=./services/supervisor/conf.d/
-SUPERVISOR_LOG=./logs/supervisor
-SUPERVISOR_CONF_FILE=./services/supervisor/supervisord.conf
-SUPERVISOR_HOST_PORT_C=9001
+# SUPERVISOR_CONFIG=./services/supervisor/conf.d/
+# SUPERVISOR_LOG=./logs/supervisor
+# SUPERVISOR_CONF_FILE=./services/supervisor/supervisord.conf
+# SUPERVISOR_HOST_PORT_C=9001
 
 #
 # PHP7
@@ -83,39 +83,38 @@ SUPERVISOR_HOST_PORT_C=9001
 # or install multi plugins as:
 # PHP_EXTENSIONS=pdo_mysql,mysqli,gd,curl,opcache
 #
-PHP_VERSION=7.4.7
+PHP_VERSION=7.2.3
 PHP_PHP_CONF_FILE=./services/php/php.ini
 PHP_FPM_CONF_FILE=./services/php/php-fpm.conf
 PHP_LOG_DIR=./logs/php
-PHP_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache
-
+PHP_EXTENSIONS=oci8,pdo_mysql,sqlsrv,pdo_sqlsrv,pdo_oci,mysqli,mbstring,gd,curl,opcache,memcache,redis,yaf,swoole,mongodb,bcmath,sysvshm,xdebug,pcntl
 
 #
 # PHP5.6
 #
-PHP56_VERSION=5.6.40
-PHP56_PHP_CONF_FILE=./services/php56/php.ini
-PHP56_FPM_CONF_FILE=./services/php56/php-fpm.conf
-PHP56_LOG_DIR=./logs/php
-PHP56_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache
+# PHP56_VERSION=5.6.40
+# PHP56_PHP_CONF_FILE=./services/php56/php.ini
+# PHP56_FPM_CONF_FILE=./services/php56/php-fpm.conf
+# PHP56_LOG_DIR=./logs/php
+# PHP56_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache
 
-#
-# PHP5.4
-#
-PHP54_VERSION=5.4.45
-PHP54_PHP_CONF_FILE=./services/php54/php.ini
-PHP54_FPM_CONF_FILE=./services/php54/php-fpm.conf
-PHP54_LOG_DIR=./logs/php
-PHP54_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache
+# #
+# # PHP5.4
+# #
+# PHP54_VERSION=5.4.45
+# PHP54_PHP_CONF_FILE=./services/php54/php.ini
+# PHP54_FPM_CONF_FILE=./services/php54/php-fpm.conf
+# PHP54_LOG_DIR=./logs/php
+# PHP54_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache
 
 #
 # RABBITMQ
 #
-RABBITMQ_VERSION=management
-RABBITMQ_HOST_PORT_C=5672
-RABBITMQ_HOST_PORT_S=15672
-RABBITMQ_DEFAULT_USER=myuser
-RABBITMQ_DEFAULT_PASS=mypass
+# RABBITMQ_VERSION=management
+# RABBITMQ_HOST_PORT_C=5672
+# RABBITMQ_HOST_PORT_S=15672
+# RABBITMQ_DEFAULT_USER=myuser
+# RABBITMQ_DEFAULT_PASS=mypass
 
 #
 # MONGODB
@@ -143,42 +142,42 @@ MONGODB_INITDB_ROOT_PASSWORD=123456
 # or install plugins as:
 # ELASTICSEARCH_PLUGINS=analysis-ik,analysis-pinyin
 #
-ELASTICSEARCH_VERSION=7.1.1
-ELASTICSEARCH_CONF_FILE=./services/elasticsearch/elasticsearch.yml
-ELASTICSEARCH_HOST_PORT_C=9200
-ELASTICSEARCH_HOST_PORT_S=9300
-ELASTICSEARCH_PLUGINS=
+# ELASTICSEARCH_VERSION=7.1.1
+# ELASTICSEARCH_CONF_FILE=./services/elasticsearch/elasticsearch.yml
+# ELASTICSEARCH_HOST_PORT_C=9200
+# ELASTICSEARCH_HOST_PORT_S=9300
+# ELASTICSEARCH_PLUGINS=
 
 #
 # KIBANA
 #
-KIBANA_VERSION=7.1.1
-KIBANA_HOST=5601
-KIBANA_I18N_LOCALE=zh-CN
+# KIBANA_VERSION=7.1.1
+# KIBANA_HOST=5601
+# KIBANA_I18N_LOCALE=zh-CN
 
 #
 # LOGSTASH
 #
-LOGSTASH_VERSION=7.1.1
-LOGSTASH_HOST=5601
-LOGSTASH_HOST_PORT_C=9600
-LOGSTASH_HOST_PORT_S=5044
+# LOGSTASH_VERSION=7.1.1
+# LOGSTASH_HOST=5601
+# LOGSTASH_HOST_PORT_C=9600
+# LOGSTASH_HOST_PORT_S=5044
 
 #
 # MySQL8
 #
-MYSQL_VERSION=8.0.13
-MYSQL_HOST_PORT=3306
-MYSQL_ROOT_PASSWORD=123456
-MYSQL_CONF_FILE=./services/mysql/mysql.cnf
+# MYSQL_VERSION=8.0.13
+# MYSQL_HOST_PORT=3306
+# MYSQL_ROOT_PASSWORD=123456
+# MYSQL_CONF_FILE=./services/mysql/mysql.cnf
 
 #
 # MySQL5
 #
-MYSQL5_VERSION=5.7.28
-MYSQL5_HOST_PORT=3305
-MYSQL5_ROOT_PASSWORD=123456
-MYSQL5_CONF_FILE=./services/mysql5/mysql.cnf
+# MYSQL5_VERSION=5.7.28
+# MYSQL5_HOST_PORT=3305
+# MYSQL5_ROOT_PASSWORD=123456
+# MYSQL5_CONF_FILE=./services/mysql5/mysql.cnf
 
 #
 # Redis
@@ -190,28 +189,28 @@ REDIS_CONF_FILE=./services/redis/redis.conf
 #
 # Memcached
 #
-MEMCACHED_VERSION=alpine
-MEMCACHED_HOST_PORT=11211
-MEMCACHED_CACHE_SIZE=128
+# MEMCACHED_VERSION=alpine
+# MEMCACHED_HOST_PORT=11211
+# MEMCACHED_CACHE_SIZE=128
 
 #
 # phpMyAdmin
 #
-PHPMYADMIN_HOST_PORT=8080
-PHPMYADMIN_USER_CONF_FILE=./services/phpmyadmin/config.user.inc.php
-PHPMYADMIN_PHP_CONF_FILE=./services/phpmyadmin/php-phpmyadmin.ini
+# PHPMYADMIN_HOST_PORT=8080
+# PHPMYADMIN_USER_CONF_FILE=./services/phpmyadmin/config.user.inc.php
+# PHPMYADMIN_PHP_CONF_FILE=./services/phpmyadmin/php-phpmyadmin.ini
 
 #
 # redisMyAdmin
 #
-REDISMYADMIN_HOST_PORT=8081
+# REDISMYADMIN_HOST_PORT=8081
 
 #
 # AdminMongo
 #
-ADMINMONGO_HOST_PORT=1234
+# ADMINMONGO_HOST_PORT=1234
 
 #
 # Node
 #
-NODE_VERSION=10.16.1-alpine
+# NODE_VERSION=10.16.1-alpine
