upgrade config file

--- a/services/php/php.ini
+++ b/services/php/php.ini
@@ -128,13 +128,13 @@ ifx.blobinfile = 0
 ifx.nullformat = 0
 [Session]
 session.save_handler = memcache
-session.save_path = "tcp://127.0.0.1:11311"
+session.save_path = "memcached:11211"
 session.use_cookies = 1
 session.name = _s_id_
 session.auto_start = 0
 session.cookie_lifetime = 0
 session.cookie_path = /
-session.cookie_domain = oray.net
+session.cookie_domain = dev.oray.com
 session.cookie_httponly = 
 session.serialize_handler = php
 session.gc_probability = 1
