--- a/services/php/php.ini
+++ b/services/php/php.ini
@@ -50,7 +50,7 @@ cgi.fix_pathinfo=0
 file_uploads = On
 upload_max_filesize = 2M
 allow_url_fopen = On
-allow_url_include = Off
+allow_url_include = On
 default_socket_timeout = 60
 [Date]
 date.timezone = Asia/Shanghai
@@ -187,9 +187,8 @@ xdebug.start_with_request=yes
 ; xdebug.remote_enable = 1
 ; xdebug.remote_handler = "dbgp"
 ; ; Set to host.docker.internal on Mac and Windows, otherwise, set to host real ip
-; xdebug.remote_host = host.docker.internal
 xdebug.client_host = 192.168.30.90
-; ;xdebug.remote_port = 9000
+; xdebug.remote_port = 9003
 ; xdebug.remote_log = /var/log/php/xdebug.log
 SERVER_ENV=develop
 [Yaf]
