--- a/env.sample
+++ b/env.sample
@@ -174,10 +174,10 @@ MONGODB_INITDB_ROOT_PASSWORD=123456
 #
 # MySQL5
 #
-# MYSQL5_VERSION=5.7.28
-# MYSQL5_HOST_PORT=3305
-# MYSQL5_ROOT_PASSWORD=123456
-# MYSQL5_CONF_FILE=./services/mysql5/mysql.cnf
+MYSQL5_VERSION=5.7.28
+MYSQL5_HOST_PORT=3305
+MYSQL5_ROOT_PASSWORD=123456
+MYSQL5_CONF_FILE=./services/mysql5/mysql.cnf
 
 #
 # Redis
@@ -189,9 +189,9 @@ REDIS_CONF_FILE=./services/redis/redis.conf
 #
 # Memcached
 #
-# MEMCACHED_VERSION=alpine
-# MEMCACHED_HOST_PORT=11211
-# MEMCACHED_CACHE_SIZE=128
+MEMCACHED_VERSION=alpine
+MEMCACHED_HOST_PORT=11211
+MEMCACHED_CACHE_SIZE=128
 
 #
 # phpMyAdmin
