--- a/services/php/php.ini
+++ b/services/php/php.ini
@@ -139,7 +139,7 @@ session.cookie_httponly =
 session.serialize_handler = php
 session.gc_probability = 1
 session.gc_divisor     = 1000
-session.gc_maxlifetime = 1440
+session.gc_maxlifetime = 86400
 session.bug_compat_42 = 0
 session.bug_compat_warn = 1
 session.referer_check =
@@ -182,7 +182,7 @@ extension = grpc
 [opcache]
 ; zend_extension=opcache
 [XDebug]
-xdebug.mode=debug
+xdebug.mode=debug,coverage
 xdebug.start_with_request=yes
 ; xdebug.remote_enable = 1
 ; xdebug.remote_handler = "dbgp"
